--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Tigin Teknoloji</title>
+    <title>Ti-Shift</title>
     <base href="/" />
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <link rel="preconnect" href="https://primefaces.org" />
-    <link rel="icon" type="image/x-icon" href="https://primefaces.org/cdn/primeng/images/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="assets/tshift.svg" />
     <link href="https://fonts.cdnfonts.com/css/lato" rel="stylesheet" />
 </head>
 
